# mws-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/xmlhelper/: Cargo.toml  LICENSE  README.md
crates/xmlhelper/src/: decode.rs  encode.rs  lib.rs
mws/: Cargo.toml
mws-cli/: Cargo.toml
mws-cli/src/: env.rs  main.rs
mws-derive/: Cargo.toml
mws-derive/src/: lib.rs
mws-derive/tests/: derive_from_xml_stream.rs
mws-tests/: Cargo.toml
mws-tests/tests/: derive_from_tdff_row.rs  derive_from_xml_stream.rs  derive_serialize_mws_params.rs
mws-tests/tests/fixtures/: report.tdff
mws/src/: client.rs  constants.rs  lib.rs  macros.rs  result.rs  sign.rs  tdff.rs  types.rs
mws/src/feeds/: inventory.rs  mod.rs  order_fulfillment_data.rs
mws/src/feeds/message/: inventory.rs  mod.rs  order_fulfillment_data.rs
mws/src/fulfillment_inbound_shipment/: mod.rs  types.rs
mws/src/fulfillment_inventory/: mod.rs  types.rs
mws/src/fulfillment_outbound/: mod.rs  types.rs
mws/src/merchant_fulfillment/: mod.rs  types.rs
mws/src/orders/: mod.rs  types.rs
mws/src/products/: mod.rs  types.rs
mws/src/reports/: mod.rs  types.rs
mws/src/subscriptions/: mod.rs  types.rs
mws/src/subscriptions/notification/: any_offer_changed.rs  mod.rs
mws/src/xmlhelper/: decode.rs  encode.rs  mod.rs
src/: client.rs  lib.rs  macros.rs  sign.rs  tdff.rs
src/feeds/: inventory.rs  mod.rs
src/fulfillment_inbound_shipment/: mod.rs  types.rs
src/fulfillment_inventory/: mod.rs  types.rs
src/fulfillment_outbound/: mod.rs  types.rs
src/orders/: mod.rs  types.rs
src/products/: mod.rs  types.rs
src/reports/: mod.rs  types.rs
src/serialize/: decode.rs
src/xml/: decode.rs  encode.rs
src/xmlhelper/: decode.rs  encode.rs  mod.rs
