[package]
name = "mws"
version = "0.5.2"
authors = ["Flux Xu <fluxxu@gmail.com>"]
license = "MIT"
description = "Client library for Amazon Marketplace Web Service (Amazon MWS)"


[dependencies]
base64 = "0.2.1"
rust-crypto = "0.2.36"
reqwest = "0.7.0"
url = "1.2.4"
chrono = "0.4"
error-chain = "0.11"
csv = "0.14"
xml-rs = "0.6.1"

[dev-dependencies]
dotenv = "0.8.0"