[package]
name = "mws-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
mws = { path = "../mws" }
dotenv = "0.8.0"
structopt = { version = "0.3", default-features = false }
chrono = { version = "0.4" }
encoding_rs = "0.8.20"
md5 = "0.7.0"
base64 = "0.12.0"